dev-kubernetes/tools/httpproxy.yaml
# httpproxy.yaml
apiVersion: projectcontour.io/v1
kind: HTTPProxy
metadata:
  name: basic
spec:
  virtualhost:
    fqdn: kuard.localhost
  routes:
    - conditions:
      - prefix: /
      services:
        - name: kuard
          port: 80
